Final version of the GAN

--- a/litebird_cr_simulations.ipynb
+++ b/litebird_cr_simulations.ipynb
@@ -9,8 +9,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Lrjar_3YGYBkSjFFsaYV6RaihxXD1psr",
-      "authorship_tag": "ABX9TyMBHgOEJFXb4dKmlt0ZWw7G",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMGq+/ZNSr04ck75d0n0U3A"
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/teob97/litebird_cr_simulator/blob/main/litebird_cr_simulations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -107,7 +96,7 @@
       },
       "source": [
         "#-----------------#\n",
-        "# HIPERPARAMETERS Definition#\n",
+        "# HIPERPARAMETERS #\n",
         "#-----------------#\n",
         "\n",
         "data_shape = dataset.shape[1:]\n",
@@ -364,107 +353,6 @@
         "plt.xlabel(\"Iteration\")\n",
         "plt.ylabel(\"Loss\")\n",
         "plt.legend()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3QSOpXybqqi6"
-      },
-      "source": [
-        "z = np.random.normal(0, 1, (1, noise_dim))\n",
-        "new = g_model.predict(z)\n",
-        "\n",
-        "plt.figure(figsize=(15, 5))\n",
-        "plt.plot(new[0,1,:])\n",
-        "plt.figure(figsize=(15, 5))\n",
-        "plt.plot(test[43,1,:])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "lCWmSEJBqvEj"
-      },
-      "source": [
-        "import random\n",
-        "\n",
-        "z = np.random.normal(0, 1, (1, noise_dim))\n",
-        "new = g_model.predict(z)\n",
-        "denormalize(max_vector, min_vector, new)\n",
-        "\n",
-        "fig, ax = plt.subplots(3,4,figsize = (25,15))\n",
-        "\n",
-        "for i in range(3):\n",
-        "  for k in range(4):\n",
-        "    ax[i,k].set_title('Bolometer ' + str(k + i*4))\n",
-        "    ax[i,k].hist([new[0,k+i*4],test[random.randint(0,test.shape[0]-1),k+i*4]], 70,histtype = 'step', label=['generated', 'real'])\n",
-        "ax[0,0].legend(loc='upper left')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3P4G2F9rqye9"
-      },
-      "source": [
-        "matrix = np.corrcoef(new[0])\n",
-        "matrix_true = np.corrcoef(test[0])\n",
-        "plt.figure(figsize = (8,6))\n",
-        "sns.heatmap(matrix_true, annot = True, vmin = 0, vmax = 1)\n",
-        "plt.figure(figsize = (8,6))\n",
-        "sns.heatmap(matrix, annot = True, vmin = 0, vmax = 1)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "skMU-iQxzpOK"
-      },
-      "source": [
-        "z = np.random.normal(0,1, (250, noise_dim))\n",
-        "g_data = g_model.predict(z)\n",
-        "denormalize(max_vector, min_vector, g_data)\n",
-        "\n",
-        "for i in range(2):\n",
-        "  plt.plot(g_data[i,0]-g_data[i-1,0], linewidth = 0.1, color = 'k')\n",
-        "plt.show()\n",
-        "for i in range(2):\n",
-        "  plt.plot(test[i,0]-test[i-1,0], linewidth = 0.1, color = 'k')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Kv9YgvyV12le"
-      },
-      "source": [
-        "_ , ax = plt.subplots()\n",
-        "ax.psd(g_data[0,0])\n",
-        "ax.psd(test[4,0])\n",
-        "ax.set_xscale('log')\n",
-        "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Yy9L5yBkela5"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
