--- a/litebird_cr_simulations.ipynb
+++ b/litebird_cr_simulations.ipynb
@@ -5,11 +5,10 @@
     "accelerator": "GPU",
     "colab": {
       "name": "litebird_cr_simulations.ipynb",
-      "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Lrjar_3YGYBkSjFFsaYV6RaihxXD1psr",
-      "authorship_tag": "ABX9TyMGq+/ZNSr04ck75d0n0U3A"
+      "authorship_tag": "ABX9TyNZKHCxgwCKGl6XILOfKmUn"
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -27,7 +26,6 @@
         "import tensorflow as tf\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
         "\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
@@ -35,6 +33,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oLyjya29Paff"
+      },
+      "source": [
+        "Functions to normalize the data in the range [0,1]"
+      ]
     },
     {
       "cell_type": "code",
@@ -69,6 +76,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UoF9SSKmPhTJ"
+      },
+      "source": [
+        "Data loading"
+      ]
     },
     {
       "cell_type": "code",
@@ -108,6 +124,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U-MW1RxCPlur"
+      },
+      "source": [
+        "***DISCRIMINATOR***"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "z1lOEu8eoEgV"
@@ -141,6 +166,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xTKg5Zw0PrZq"
+      },
+      "source": [
+        "***GENERATOR***"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "XF_ArWB5oHW9"
@@ -170,6 +204,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IHccGXxKOtoN"
+      },
+      "source": [
+        "Creation of the Wasserstein GAN with gradient penalty class"
+      ]
     },
     {
       "cell_type": "code",
@@ -290,7 +333,6 @@
         "id": "OPC2xjepoR0R"
       },
       "source": [
-        "# learning_rate=0.0002, beta_1=0.5 are recommened (only for Adam)\n",
         "generator_optimizer = keras.optimizers.Adam(learning_rate=0.0005, beta_1=0.5)\n",
         "discriminator_optimizer = keras.optimizers.Adam(learning_rate=0.0005, beta_1=0.5)\n",
         "\n",
@@ -324,16 +366,33 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "soWfoUchOY2W"
+      },
+      "source": [
+        "Start the training"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WtewycetoY7L"
       },
       "source": [
-        "# Start training\n",
         "history = wgan.fit(dataset, batch_size=BATCH_SIZE, epochs=epochs)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zo9s3pE3Og56"
+      },
+      "source": [
+        "Visualize the generator and the discriminator loss function"
+      ]
     },
     {
       "cell_type": "code",
@@ -346,7 +405,7 @@
         "steps = range(1,len(g_loss)+1)\n",
         "\n",
         "plt.figure(figsize=(15,5))\n",
-        "#plt.plot(steps, g_loss, label = 'g_loss')\n",
+        "plt.plot(steps, g_loss, label = 'g_loss')\n",
         "plt.plot(steps, d_loss, label = 'd_loss')\n",
         "\n",
         "plt.title(\"Training Loss\")\n",
