--- a/litebird_cr_simulations.ipynb
+++ b/litebird_cr_simulations.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Lrjar_3YGYBkSjFFsaYV6RaihxXD1psr",
-      "authorship_tag": "ABX9TyNZKHCxgwCKGl6XILOfKmUn"
+      "authorship_tag": "ABX9TyPGuqEe7Dl047qyce1z8pdb"
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -93,8 +93,8 @@
       },
       "source": [
         "#Preparing the data (loading and normalization)\n",
-        "data = np.load('/content/drive/My Drive/Colab Notebooks/TOD.npy')\n",
-        "test = np.load('/content/drive/My Drive/Colab Notebooks/TOD_test.npy')\n",
+        "data = np.load('TOD.npy')\n",
+        "test = np.load('TOD_test.npy')\n",
         "\n",
         "dataset = data[:,1,:,:].copy()\n",
         "test = test[:,1,:,:]\n",
